# 3-python-package-book-of-amos-1

./: README.md  pyproject.toml
.github/workflows/: build.yaml
tests/: test_pet.py
